--- a/Assignment2/Assignment_2.ipynb
+++ b/Assignment2/Assignment_2.ipynb
@@ -547,7 +547,10 @@
     "## Summary\n",
     "After using trained data instead of test data we can see that we get much better results.  \n",
     "After switching the data that we use error decreased by 6.3%. \\\n",
-    "This dependence can be observed in exercise 2 when we plot difference of error between trained and test data."
+    "This dependence can be observed in exercise 2 when we plot difference of error between trained and test data.\n",
+    "\n",
+    "## Note: \n",
+    "Using polynomial model would probably fit data better."
    ]
   }
  ],
