--- a/Assignment optional 2-3/Untitled.ipynb
+++ b/Assignment optional 2-3/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "24a20df1",
+   "id": "bdef420b",
    "metadata": {},
    "source": [
     "# Assignment 2-3 optional\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b832a5ec",
+   "id": "23e4ff01",
    "metadata": {},
    "source": [
     "# Bank Customer Churn Dataset\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "2de093c6",
+   "id": "f6e45632",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d732e1bf",
+   "id": "85e5a8f3",
    "metadata": {},
    "source": [
     "# Exercise 1\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "f305d82f",
+   "id": "41c25e52",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1301652f",
+   "id": "0fa31ea8",
    "metadata": {},
    "source": [
     "## Summary:\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "d4c0df1d",
+   "id": "95d1d173",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e469c5ee",
+   "id": "9dba4d1f",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "157d5aa8",
+   "id": "8bcc3235",
    "metadata": {},
    "source": [
     "## Summary: \n",
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e2afb81a",
+   "id": "0e94211e",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1cc7d35",
+   "id": "4d7aabcd",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7ad9ad3",
+   "id": "1c2ceeff",
    "metadata": {},
    "source": [
     "## Model performance\n",
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "98641dfa",
+   "id": "9c3edc36",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee6731a2",
+   "id": "c4472f21",
    "metadata": {},
    "source": [
     "## Summary:\n",
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee45c893",
+   "id": "6ec4b617",
    "metadata": {},
    "source": [
     "# Exercise 2\n",
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "4b56a7c9",
+   "id": "5f0a36b1",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cf6f0ad",
+   "id": "e202e128",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db14f04e",
+   "id": "3d25ca78",
    "metadata": {},
    "source": [
     "# Excercise 3\n",
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "67022959",
+   "id": "e0cb5266",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "cdb262c0",
+   "id": "299d7318",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e31bd604",
+   "id": "18b8e205",
    "metadata": {},
    "source": [
     "# 1. Linear Regression. A bit of formalism\n",
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "a85d17a4",
+   "id": "7d04f683",
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71c06bc1",
+   "id": "e4a212d2",
    "metadata": {},
    "source": [
     "# Exercise 1\n",
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "df5b7ad3",
+   "id": "91f252df",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "282c7072",
+   "id": "30a74be4",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "c754de67",
+   "id": "9d52cbff",
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a3729c7",
+   "id": "6b936aae",
    "metadata": {},
    "source": [
     "## Exercise 2\n",
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "7bcd3481",
+   "id": "f77c8de2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,8 +927,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 87,
+   "id": "5b9c67ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "matmul: Input operand 1 does not have enough dimensions (has 0, gufunc core with signature (n?,k),(k,m?)->(n?,m?) requires 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [87], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#No Bias Part\u001b[39;00m\n\u001b[0;32m      4\u001b[0m b_arr \u001b[38;5;241m=\u001b[39m [np\u001b[38;5;241m.\u001b[39marray(b1) \u001b[38;5;28;01mfor\u001b[39;00m b1 \u001b[38;5;129;01min\u001b[39;00m np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1000\u001b[39m, \u001b[38;5;241m1000\u001b[39m, num\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2001\u001b[39m)]\n\u001b[1;32m----> 5\u001b[0m cost_arr \u001b[38;5;241m=\u001b[39m [cost(predict(b, X[:,\u001b[38;5;241m0\u001b[39m]), y_shifted) \u001b[38;5;28;01mfor\u001b[39;00m b \u001b[38;5;129;01min\u001b[39;00m b_arr]\n\u001b[0;32m      6\u001b[0m best_b1 \u001b[38;5;241m=\u001b[39m b_arr[np\u001b[38;5;241m.\u001b[39margmin(cost_arr)]\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m#Bias Part\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn [87], line 5\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#No Bias Part\u001b[39;00m\n\u001b[0;32m      4\u001b[0m b_arr \u001b[38;5;241m=\u001b[39m [np\u001b[38;5;241m.\u001b[39marray(b1) \u001b[38;5;28;01mfor\u001b[39;00m b1 \u001b[38;5;129;01min\u001b[39;00m np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1000\u001b[39m, \u001b[38;5;241m1000\u001b[39m, num\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2001\u001b[39m)]\n\u001b[1;32m----> 5\u001b[0m cost_arr \u001b[38;5;241m=\u001b[39m [cost(\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m, y_shifted) \u001b[38;5;28;01mfor\u001b[39;00m b \u001b[38;5;129;01min\u001b[39;00m b_arr]\n\u001b[0;32m      6\u001b[0m best_b1 \u001b[38;5;241m=\u001b[39m b_arr[np\u001b[38;5;241m.\u001b[39margmin(cost_arr)]\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m#Bias Part\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn [60], line 4\u001b[0m, in \u001b[0;36mpredict\u001b[1;34m(b, X)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpredict\u001b[39m(b, X):\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;66;03m# return matrix multiplication\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmatmul\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mValueError\u001b[0m: matmul: Input operand 1 does not have enough dimensions (has 0, gufunc core with signature (n?,k),(k,m?)->(n?,m?) requires 1)"
+     ]
+    }
+   ],
+   "source": [
+    "y_shifted = y+1e6\n",
+    "\n",
+    "#No Bias Part\n",
+    "b_arr = [np.array(b1) for b1 in np.linspace(-1000, 1000, num=2001)]\n",
+    "cost_arr = [cost(predict(b, X[:,0]), y_shifted) for b in b_arr]\n",
+    "best_b1 = b_arr[np.argmin(cost_arr)]\n",
+    "\n",
+    "\n",
+    "#Bias Part\n",
+    "nb_of_bs = 101 # compute the cost nb_of_bs times in each dimension\n",
+    "b1 = np.linspace(-500, 2000, num=nb_of_bs) # slope coefficient\n",
+    "b2 = np.linspace(-1e5, 3e6, num=nb_of_bs) # bias\n",
+    "b_x, b_y = np.meshgrid(b1, b2) # generate grid\n",
+    "cost_arr_2d = np.zeros((nb_of_bs, nb_of_bs)) # initialize cost matrix\n",
+    "\n",
+    "# Fill the cost matrix for each combination of coefficients\n",
+    "for i in range(nb_of_bs):\n",
+    "    for j in range(nb_of_bs):\n",
+    "        cost_arr_2d[i,j] = cost(predict(np.array([[b_x[i,j]], [b_y[i,j]]]), X) , y_shifted)\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(15,20)) \n",
+    "        \n",
+    "plt.subplot(2,1,1)\n",
+    "plt.title(\"Cost heatmap for bias and slope\")\n",
+    "\n",
+    "plt.contourf(b_x, b_y, np.log(cost_arr_2d), 20, alpha=0.9, cmap=cm.pink)\n",
+    "cbar = plt.colorbar()\n",
+    "plt.scatter(best_b1, 0, label = \"Best solution without bias\")\n",
+    "cbar.ax.set_ylabel('log(cost)')\n",
+    "plt.xlabel(\"b1 (slope)\")\n",
+    "plt.ylabel(\"b2 (bias)\")\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.subplot(2,1,2)\n",
+    "\n",
+    "plt.scatter(X.T[0], y_shifted)\n",
+    "plt.xlabel(\"living sqft\")\n",
+    "plt.ylabel(\"price\")\n",
+    "\n",
+    "x_model = np.linspace(np.min(X), np.max(X), 1000)\n",
+    "y_model = best_b1*x_model\n",
+    "plt.plot(x_model, y_model, label='No Bias. Best b1 = {}, error = {:.2E}'.format(best_b1, cost_arr[np.argmin(cost_arr)]))\n",
+    "\n",
+    "best_b1_2d_ind, best_b2_2d_ind = np.unravel_index(cost_arr_2d.argmin(), cost_arr_2d.shape)\n",
+    "best_b1 = b_x[best_b1_2d_ind,best_b2_2d_ind]\n",
+    "best_b2 = b_y[best_b1_2d_ind,best_b2_2d_ind]\n",
+    "\n",
+    "y_model = best_b1*x_model + best_b2\n",
+    "plt.plot(x_model, y_model, label='Best b1 = {}, b2 = {}, error = {:.2E}'.format(best_b1, best_b2, cost_arr_2d[best_b1_2d_ind,best_b2_2d_ind]))\n",
+    "\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e6a63385",
+   "id": "72da5b79",
    "metadata": {},
    "outputs": [],
    "source": []
