--- a/Assignment optional 2-3/Assignment_2_3_optional.ipynb
+++ b/Assignment optional 2-3/Assignment_2_3_optional.ipynb
@@ -1524,6 +1524,16 @@
    "source": [
     "As we can see without standarization points are enormously distant from each other just as in the basic version of the assignment."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8388348e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Add f.e. regularisation, feautures selection, non-parametric regression, etc."
+   ]
   }
  ],
  "metadata": {
